@@ -1,0 +1,5 @@
+%ª
+\catcode`\{=1
+\catcode`\}=2
+\message{\filedump length 20{\jobname.tex}}
+\end
